@@ -46,6 +46,7 @@
 #define ASN1_F_D2I_DSAPARAMS				 137
 #define ASN1_F_D2I_DSAPRIVATEKEY			 138
 #define ASN1_F_D2I_DSAPUBLICKEY				 139
+#define ASN1_F_D2I_NETSCAPE_CERT_SEQUENCE		 228
 #define ASN1_F_D2I_NETSCAPE_PKEY			 140
 #define ASN1_F_D2I_NETSCAPE_RSA				 141
 #define ASN1_F_D2I_NETSCAPE_RSA_2			 142
@@ -96,6 +97,7 @@
 #define ASN1_F_I2D_RSAPUBLICKEY				 186
 #define ASN1_F_I2D_X509_ATTRIBUTE			 187
 #define ASN1_F_I2T_ASN1_OBJECT				 188
+#define ASN1_F_NETSCAPE_CERT_SEQUENCE_NEW		 229
 #define ASN1_F_NETSCAPE_PKEY_NEW			 189
 #define ASN1_F_NETSCAPE_SPKAC_NEW			 190
 #define ASN1_F_NETSCAPE_SPKI_NEW			 191
