@@ -5,6 +5,9 @@
 
  Changes between 0.9.1c and 0.9.2
 
+  *) Add ASN1 and PEM code to support netscape certificate sequences.
+     [Steve Henson]
+
   *) Add several PKIX and private extended key usage OIDs.
      [Steve Henson]
 
